bad/assign_field_array_arr_elem_bool.example_compiler_output
ERROR
[1mbad/assign_field_array_arr_elem_bool.lat:7:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `boolean`[m
	(new C[1])[2].fld = true;
	                  [1;32m^[m
